# onedrive

./: .gitignore  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ONEDRIVE_COLORS.md  SOMEDRIVE_COLORS.md  TWO_WAY_SYNC_IMPLEMENTATION_PLAN.md  sync-db-authority-roadmap.md  sync-reliability-rebuild-plan.md  sync-state-authority-corrective-action-plan.md  sync-status-single-pipeline-implementation-plan.md
scripts/: check-file-lines.mjs  check-sync-status-writes.mjs
src/: ARCHITECTURE.md  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: account_profiles.rs  activity_log.rs  app_settings.rs  auth.rs  bootstrap.rs  log_context.rs  mod.rs  session_log.rs  state.rs  sync_engine.rs  sync_runtime.rs  sync_settings.rs
src-tauri/src/app/auth/: device_flow.rs  interactive_flow.rs  models.rs  session_and_utils.rs
src-tauri/src/app/commands/: accounts.rs  activity.rs  auth.rs  mod.rs  status.rs  sync_runtime.rs  sync_settings.rs  update.rs
src-tauri/src/app/commands/accounts/: folder_commands.rs  global_sync_commands.rs  profile_commands.rs
src-tauri/src/app/sync_engine/: action_jobs.rs  cycle.rs  cycle_orchestrator.rs  download_lane.rs  graph_transfer.rs  job_materializer.rs  job_queue.rs  job_queue_activity_projection.rs  job_queue_db.rs  job_queue_download_store.rs  job_queue_issue_throttle_store.rs  job_queue_lifecycle_store.rs  job_queue_state_store.rs  job_queue_tests.rs  job_queue_upload_store.rs  lifecycle_writer.rs  local_changes.rs  local_changes_tests.rs  part1.rs  part2.rs  part3.rs  part4.rs  path_state.rs  planner.rs  planner_index.rs  planner_transitions.rs  preamble.rs  remote_changes.rs  remote_delta_producer.rs  remote_download_dispatcher.rs  remote_download_workers.rs  remote_page_processor.rs  remote_pipeline_loop.rs  runtime_and_models.rs  upload_lane.rs  worker_lifecycle.rs
src/hooks/: useAppRuntime.ts  useToastManager.ts  useUiInteractionLogger.ts  useWindowControls.ts
src/layout/: AppPageRenderer.tsx  AppWorkspace.tsx
src/pages/: AccountDetailPage.tsx  AccountsHomePage.tsx  ActivityPage.tsx  (+5 more)
temp/: sync-db-single-source-of-truth-plan.md  sync-ui-single-authority-codeperfect-plan.md  sync-ui-terminal-truth-plan.md
(+37 files in other folders)
