[package]
name = "somedrive"
version = "0.1.0"
description = "Linux-first desktop client for Microsoft OneDrive"
authors = ["Jack Brumley"]
license = "MIT"
edition = "2021"

[lib]
name = "somedrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
dirs = "5.0"
arboard = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
